@@ -21,6 +21,7 @@ export(GeomInterpolateTern)
 export(GeomLisoprop)
 export(GeomLline)
 export(GeomLmark)
+export(GeomPointSwap)
 export(GeomRisoprop)
 export(GeomRline)
 export(GeomRmark)
@@ -60,6 +61,7 @@ export(draw_key_Tiso)
 export(draw_key_Tline)
 export(draw_key_Tmark)
 export(draw_key_crosshair_tern)
+export(draw_key_point_swap)
 export(element_ternary)
 export(geom_Lisoprop)
 export(geom_Lline)
@@ -79,6 +81,7 @@ export(geom_errorbarR)
 export(geom_errorbarT)
 export(geom_interpolate_tern)
 export(geom_mask)
+export(geom_point_swap)
 export(geom_smooth_tern)
 export(ggplot)
 export(ggplotGrob)
