@@ -1,0 +1,73 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/geom-point-swap.R
+\docType{data}
+\name{geom_point_swap}
+\alias{GeomPointSwap}
+\alias{geom_point_swap}
+\title{Points (Colour and Fill Swapped), as for a scatterplot}
+\usage{
+geom_point_swap(mapping = NULL, data = NULL, stat = "identity",
+  position = "identity", ..., na.rm = FALSE, show.legend = NA,
+  inherit.aes = TRUE)
+}
+\arguments{
+\item{mapping}{Set of aesthetic mappings created by \code{\link{aes}} or
+\code{\link{aes_}}. If specified and \code{inherit.aes = TRUE} (the
+default), it is combined with the default mapping at the top level of the
+plot. You must supply \code{mapping} if there is no plot mapping.}
+
+\item{data}{The data to be displayed in this layer. There are three
+   options:
+
+   If \code{NULL}, the default, the data is inherited from the plot
+   data as specified in the call to \code{\link{ggplot}}.
+
+   A \code{data.frame}, or other object, will override the plot
+   data. All objects will be fortified to produce a data frame. See
+   \code{\link{fortify}} for which variables will be created.
+
+   A \code{function} will be called with a single argument,
+   the plot data. The return value must be a \code{data.frame.}, and
+   will be used as the layer data.}
+
+\item{stat}{The statistical transformation to use on the data for this
+layer, as a string.}
+
+\item{position}{Position adjustment, either as a string, or the result of
+a call to a position adjustment function.}
+
+\item{...}{other arguments passed on to \code{\link{layer}}. These are
+often aesthetics, used to set an aesthetic to a fixed value, like
+\code{color = "red"} or \code{size = 3}. They may also be parameters
+to the paired geom/stat.}
+
+\item{na.rm}{If \code{FALSE} (the default), removes missing values with
+a warning.  If \code{TRUE} silently removes missing values.}
+
+\item{show.legend}{logical. Should this layer be included in the legends?
+\code{NA}, the default, includes if any aesthetics are mapped.
+\code{FALSE} never includes, and \code{TRUE} always includes.}
+
+\item{inherit.aes}{If \code{FALSE}, overrides the default aesthetics,
+rather than combining with them. This is most useful for helper functions
+that define both data and aesthetics and shouldn't inherit behaviour from
+the default plot specification, e.g. \code{\link{borders}}.}
+}
+\description{
+The \code{geom_point_swap} geometry is used to create scatterplots, however, this version swaps the colour and the 
+fill mappings. Useful if the fill mapping is already occupied (say with existing polygon geometry), this
+geometry will allow points of shape 21-25 to use colour mapping for the center colour, and fill mapping for the
+border.
+}
+\examples{
+data(Feldspar)
+ggtern(Feldspar,aes(Ab,An,Or)) + 
+stat_confidence_tern(geom='polygon',aes(fill=..level..),color='white') + 
+geom_mask() + 
+geom_point_swap(aes(colour=T.C,shape=Feldspar),fill='black',size=5) +
+scale_shape_manual(values=c(21,24)) +
+scale_color_gradient(low='green',high='red') +
+labs(title="Feldspar",color="Temperature",fill='Confidence')
+}
+\keyword{datasets}
+
